Fix image overflow in mobile

--- a/layouts/_default/index.stylesheet.css
+++ b/layouts/_default/index.stylesheet.css
@@ -627,6 +627,7 @@ td:first-of-type, th:first-of-type {
     bottom: 0;
     justify-content: center;
     margin: 0;
+    overflow: hidden;
   }
   .profile-wrapper img {
     margin: 0;
